--- a/pom.xml
+++ b/pom.xml
@@ -219,6 +219,12 @@
 
       <dependency>
         <groupId>org.verapdf.pdfbox</groupId>
+        <artifactId>preflight</artifactId>
+        <version>${verapdf.pdfbox.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.verapdf.pdfbox</groupId>
         <artifactId>xmpbox</artifactId>
         <version>${verapdf.pdfbox.version}</version>
       </dependency>
