--- a/validation-logic/pom.xml
+++ b/validation-logic/pom.xml
@@ -36,6 +36,11 @@
       <groupId>org.verapdf</groupId>
       <artifactId>validation-profile-parser</artifactId>
     </dependency>
+    <dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <version>1.2.16</version>
+    </dependency>
 
   </dependencies>
 
