--- a/core/pom.xml
+++ b/core/pom.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
     <artifactId>verapdf-library</artifactId>
     <groupId>org.verapdf</groupId>
-    <version>0.3.0-SNAPSHOT</version>
+    <version>0.4.0</version>
   </parent>
 
   <artifactId>core</artifactId>
@@ -40,7 +39,7 @@
       <artifactId>bcprov-jdk15on</artifactId>
     </dependency>
 
-    <!-- TEST DEPENDENCIES-->
+    <!-- TEST DEPENDENCIES -->
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-annotations</artifactId>
@@ -73,9 +72,8 @@
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
         <configuration>
-        <!-- The destination file for the code coverage report has to be set to the same value
-             in the parent pom and in each module pom. Then JaCoCo will add up information in
-             the same report, so that, it will give the cross-module code coverage. -->
+          <!-- The destination file for the code coverage report has to be set to the same value in the parent pom and in 
+            each module pom. Then JaCoCo will add up information in the same report, so that, it will give the cross-module code coverage. -->
           <destFile>${project.basedir}/../target/jacoco-it.exec</destFile>
         </configuration>
       </plugin>
