--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
   <groupId>org.verapdf</groupId>
   <artifactId>verapdf-library</artifactId>
-  <version>0.4.0</version>
+  <version>0.5.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>veraPDF PDF/A Validation Library</name>
@@ -113,7 +113,7 @@
     <maven.exec.version>1.4.0</maven.exec.version>
     <mvn.gpg.plugin.version>1.6</mvn.gpg.plugin.version>
     <verapdf.pdfbox.version>2.0.0-SNAPSHOT</verapdf.pdfbox.version>
-    <verapdf.model.version>[0.4.0,0.5.0)</verapdf.model.version>
+    <verapdf.model.version>[0.5.0,0.6.0)</verapdf.model.version>
   </properties>
 
   <dependencyManagement>
