--- a/gui/pom.xml
+++ b/gui/pom.xml
@@ -50,52 +50,84 @@
           </execution>
         </executions>
       </plugin>
-      <plugin>
-        <groupId>com.googlecode.maven-download-plugin</groupId>
-        <artifactId>download-maven-plugin</artifactId>
-        <version>1.2.1</version>
-        <executions>
-          <execution>
-            <id>corpus-master</id>
-            <phase>package</phase>
-            <goals>
-              <goal>wget</goal>
-            </goals>
-            <configuration>
-              <url>https://github.com/veraPDF/veraPDF-corpus/archive/staging.zip</url>
-              <unpack>true</unpack>
-              <skipCache>true</skipCache>
-              <outputDirectory>${project.build.directory}/appassembler/resources</outputDirectory>
-            </configuration>
-          </execution>
-          <execution>
-            <id>profiles-integration</id>
-            <phase>package</phase>
-            <goals>
-              <goal>wget</goal>
-            </goals>
-            <configuration>
-              <url>https://github.com/veraPDF/veraPDF-validation-profiles/archive/integration.zip</url>
-              <unpack>true</unpack>
-              <skipCache>true</skipCache>
-              <outputDirectory>${project.build.directory}/appassembler/resources</outputDirectory>
-            </configuration>
-          </execution>
-          <execution>
-            <id>model-integration</id>
-            <phase>package</phase>
-            <goals>
-              <goal>wget</goal>
-            </goals>
-            <configuration>
-              <url>https://github.com/veraPDF/veraPDF-model/archive/integration.zip</url>
-              <unpack>true</unpack>
-              <skipCache>true</skipCache>
-              <outputDirectory>${project.build.directory}/appassembler/resources</outputDirectory>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
+
+        <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>exec-maven-plugin</artifactId>
+            <version>${maven.exec.version}</version>
+            <executions>
+
+                <execution>
+                    <id>corpus-master</id>
+                    <phase>package</phase>
+                    <goals>
+                        <goal>exec</goal>
+                    </goals>
+                    <configuration>
+                        <executable>git</executable>
+                        <workingDirectory>${project.build.directory}/appassembler/resources</workingDirectory>
+                        <arguments>
+                            <argument>clone</argument>
+                            <argument>-b</argument>
+                            <argument>staging</argument>
+                            <argument>https://github.com/veraPDF/veraPDF-corpus-PDFA-1b</argument>
+                        </arguments>
+                        <successCodes>
+                            <successCode>0</successCode>
+                            <successCode>1</successCode>
+                            <successCode>128</successCode>
+                        </successCodes>
+                    </configuration>
+                </execution>
+
+                <execution>
+                    <id>profiles-integration</id>
+                    <phase>package</phase>
+                    <goals>
+                        <goal>exec</goal>
+                    </goals>
+                    <configuration>
+                        <executable>git</executable>
+                        <workingDirectory>${project.build.directory}/appassembler/resources</workingDirectory>
+                        <arguments>
+                            <argument>clone</argument>
+                            <argument>-b</argument>
+                            <argument>integration</argument>
+                            <argument>https://github.com/veraPDF/veraPDF-validation-profiles</argument>
+                        </arguments>
+                        <successCodes>
+                            <successCode>0</successCode>
+                            <successCode>1</successCode>
+                            <successCode>128</successCode>
+                        </successCodes>
+                    </configuration>
+                </execution>
+
+                <execution>
+                    <id>model-integration</id>
+                    <phase>package</phase>
+                    <goals>
+                        <goal>exec</goal>
+                    </goals>
+                    <configuration>
+                        <executable>git</executable>
+                        <workingDirectory>${project.build.directory}/appassembler/resources</workingDirectory>
+                        <arguments>
+                            <argument>clone</argument>
+                            <argument>-b</argument>
+                            <argument>integration</argument>
+                            <argument>https://github.com/veraPDF/veraPDF-model</argument>
+                        </arguments>
+                        <successCodes>
+                            <successCode>0</successCode>
+                            <successCode>1</successCode>
+                            <successCode>128</successCode>
+                        </successCodes>
+                    </configuration>
+                </execution>
+
+            </executions>
+        </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-assembly-plugin</artifactId>
