Force use of OPF snapshot repo.

--- a/pom.xml
+++ b/pom.xml
@@ -82,7 +82,7 @@
   <repositories>
     <repository>
       <snapshots>
-        <enabled>false</enabled>
+        <enabled>true</enabled>
       </snapshots>
       <id>vera-dev</id>
       <name>Vera development</name>
