--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,7 @@
     <module>cli</module>
     <module>gui</module>
     <module>feature-report</module>
+    <module>metadata-fixer</module>
   </modules>
 
   <scm>
