--- a/pom.xml
+++ b/pom.xml
@@ -184,6 +184,12 @@
 
       <dependency>
         <groupId>org.verapdf</groupId>
+        <artifactId>metadata-fixer</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.verapdf</groupId>
         <artifactId>pdf-model</artifactId>
         <version>${verapdf.model.version}</version>
       </dependency>
