--- a/metadata-fixer/pom.xml
+++ b/metadata-fixer/pom.xml
@@ -2,14 +2,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <artifactId>verapdf-library</artifactId>
         <groupId>org.verapdf</groupId>
         <version>0.5.0-SNAPSHOT</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
 
     <artifactId>metadata-fixer</artifactId>
+    <name>Metadata fixer</name>
 
     <dependencies>
         <dependency>
