Fix in metadata fixer pom

--- a/metadata-fixer/pom.xml
+++ b/metadata-fixer/pom.xml
@@ -11,7 +11,7 @@
     </parent>
 
     <artifactId>metadata-fixer</artifactId>
-    <name>Metadata fixer</name>
+    <name>veraPDF Metadata Fixer</name>
 
     <dependencies>
         <dependency>
