--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,7 @@
     <module>gui</module>
     <module>feature-report</module>
     <module>metadata-fixer</module>
+    <module>verapdf-qa</module>
   </modules>
 
   <scm>
@@ -167,6 +168,12 @@
       <dependency>
         <groupId>org.verapdf</groupId>
         <artifactId>core</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.verapdf</groupId>
+        <artifactId>vera-cli</artifactId>
         <version>${project.version}</version>
       </dependency>
 
