--- a/feature-report/pom.xml
+++ b/feature-report/pom.xml
@@ -24,7 +24,7 @@
     </dependency>
     <dependency>
       <groupId>org.verapdf</groupId>
-      <artifactId>verapdf-exceptions</artifactId>
+      <artifactId>core</artifactId>
     </dependency>
     <dependency>
       <groupId>log4j</groupId>
