--- a/metadata-fixer/pom.xml
+++ b/metadata-fixer/pom.xml
@@ -24,7 +24,7 @@
         </dependency>
         <dependency>
             <groupId>org.verapdf</groupId>
-            <artifactId>validation-logic</artifactId>
+            <artifactId>core</artifactId>
         </dependency>
         <dependency>
             <groupId>org.verapdf</groupId>
