--- a/validation-report/pom.xml
+++ b/validation-report/pom.xml
@@ -21,7 +21,7 @@
     </dependency>
     <dependency>
       <groupId>org.verapdf</groupId>
-      <artifactId>validation-logic</artifactId>
+      <artifactId>core</artifactId>
     </dependency>
     <dependency>
       <groupId>org.verapdf</groupId>
