--- a/legacy-types/validation-profile-parser/pom.xml
+++ b/legacy-types/validation-profile-parser/pom.xml
@@ -10,9 +10,9 @@
     <version>0.5.0-SNAPSHOT</version>
   </parent>
 
-  <artifactId>validation-profile-parser</artifactId>
-  <name>veraPDF Validation Profile Parser</name>
-  <description>Parser for veraPDF Validation Profiles that encode PDF/A validation rules.</description>
+  <artifactId>legacy-types</artifactId>
+  <name>Legacy types for validation profiles and reporting</name>
+  <description>To be destroyed after reading ;) .</description>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
