Fixed validation logic unit test. Fixed bugs in validation logic.

--- a/validation-logic/pom.xml
+++ b/validation-logic/pom.xml
@@ -37,6 +37,11 @@
     </dependency>
 
     <dependency>
+      <groupId>org.verapdf</groupId>
+      <artifactId>model-implementation</artifactId>
+    </dependency>
+
+    <dependency>
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
     </dependency>
