Reinstated validation by profile.

--- a/gui/pom.xml
+++ b/gui/pom.xml
@@ -157,6 +157,12 @@
     </dependency>
 
     <dependency>
+      <groupId>org.verapdf</groupId>
+      <artifactId>legacy-types</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+
+    <dependency>
         <groupId>org.verapdf</groupId>
         <artifactId>metadata-fixer</artifactId>
     </dependency>
