First cut izpack installer.

--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,7 @@
     <module>feature-report</module>
     <module>metadata-fixer</module>
     <module>verapdf-qa</module>
+    <module>installer</module>
   </modules>
 
   <scm>
