--- a/model-implementation/pom.xml
+++ b/model-implementation/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <artifactId>verapdf-library</artifactId>
     <groupId>org.verapdf</groupId>
-    <version>0.5.0-SNAPSHOT</version>
+    <version>0.6.0</version>
   </parent>
 
   <artifactId>model-implementation</artifactId>
