Added zip assembly to the build.

--- a/installer/pom.xml
+++ b/installer/pom.xml
@@ -36,8 +36,8 @@
             <configuration>
               <outputDirectory>${izpack.staging}</outputDirectory>
 
-              <!-- recursive copy of all resource under src/main/izpack. this is the stuff to install as well as install.xml 
-                and panel data and such -->
+              <!-- recursive copy of all resource under src/main/izpack. 
+                this is the stuff to install as well as install.xml and panel data and such -->
               <resources>
                 <resource>
                   <directory>src/main/izpack</directory>
@@ -66,8 +66,8 @@
             <configuration>
               <outputDirectory>${izpack.staging}</outputDirectory>
 
-              <!-- recursive copy of all resource under src/main/izpack. this is the stuff to install as well as install.xml 
-                and panel data and such -->
+              <!-- recursive copy of all resource under src/main/izpack. 
+                this is the stuff to install as well as install.xml and panel data and such -->
               <resources>
                 <resource>
                   <directory>src/main/</directory>
@@ -108,7 +108,8 @@
         <executions>
 
           <execution>
-            <!-- copy izpack custom (custom panels, etc.) jars to izpack staging custom -->
+            <!-- copy izpack custom (custom panels, etc.) jars to izpack 
+              staging custom -->
             <id>copy-izpack-dependencies</id>
             <phase>prepare-package</phase>
             <goals>
@@ -172,8 +173,9 @@
         </executions>
       </plugin>
 
-      <!-- We need to tell the izpack-maven-plugin what to use as the base directory (this is our staging area), and also 
-        tell it the install file to use: -->
+      <!-- We need to tell the izpack-maven-plugin what to use as the base 
+        directory (this is our staging area), and also tell it the install file to 
+        use: -->
       <plugin>
         <groupId>org.codehaus.izpack</groupId>
         <artifactId>izpack-maven-plugin</artifactId>
@@ -195,8 +197,9 @@
             </configuration>
           </execution>
         </executions>
-        <!-- must have a dependency here on any code used in the installer, otherwise the classloader will not find it. So 
-          in this case we need our panels and then the package that contains the base classes for the panels -->
+        <!-- must have a dependency here on any code used in the installer, 
+          otherwise the classloader will not find it. So in this case we need our panels 
+          and then the package that contains the base classes for the panels -->
         <dependencies>
           <dependency>
             <groupId>org.codehaus.izpack</groupId>
@@ -204,6 +207,23 @@
             <version>${izpack.version}</version>
           </dependency>
         </dependencies>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <configuration>
+          <descriptor>src/assembly/app-assembly.xml</descriptor>
+          <finalName>verapdf-${pom.version}</finalName>
+        </configuration>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>single</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
