--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,8 @@
     <maven.failsafe.version>2.18.1</maven.failsafe.version>
     <maven.surefire.version>2.18.1</maven.surefire.version>
     <maven.exec.version>1.4.0</maven.exec.version>
+    <mvn.javadoc.version>2.10</mvn.javadoc.version>
+    <mvn.source.version>2.4</mvn.source.version>
     <mvn.gpg.plugin.version>1.6</mvn.gpg.plugin.version>
     <verapdf.pdfbox.version>2.0.0-SNAPSHOT</verapdf.pdfbox.version>
     <verapdf.model.version>[0.6.0,0.7.0)</verapdf.model.version>
@@ -345,6 +347,18 @@
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>versions-maven-plugin</artifactId>
           <version>2.2</version>
+        </plugin>
+
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-source-plugin</artifactId>
+          <version>${mvn.source.version}</version>
+        </plugin>
+
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-javadoc-plugin</artifactId>
+          <version>${mvn.javadoc.version}</version>
         </plugin>
 
       </plugins>
