Added JavaDoc to reports.

--- a/pom.xml
+++ b/pom.xml
@@ -448,7 +448,14 @@
           </reportSet>
         </reportSets>
       </plugin>
-
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>2.10.3</version>
+        <configuration>
+          <show>public</show>
+        </configuration>
+      </plugin>
     </plugins>
   </reporting>
 
