--- a/model-implementation/pom.xml
+++ b/model-implementation/pom.xml
@@ -31,6 +31,10 @@
       <artifactId>pdf-model</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.verapdf</groupId>
+      <artifactId>core</artifactId>
+    </dependency>
+    <dependency>
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
     </dependency>
