--- a/gui/pom.xml
+++ b/gui/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <artifactId>verapdf-library</artifactId>
     <groupId>org.verapdf</groupId>
-    <version>0.7.0-SNAPSHOT</version>
+    <version>0.8.0</version>
   </parent>
 
   <artifactId>gui</artifactId>
