Added veraPDF Maven repo to POM.

--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,18 @@
     </repository>
   </distributionManagement>
 
+
+  <repositories>
+    <repository>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+      <id>vera-dev</id>
+      <name>Vera development</name>
+      <url>http://artifactory.opf-labs.org/artifactory/vera-dev</url>
+    </repository>
+  </repositories>
+
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
