Start of feat-xmp-model implementation

--- a/metadata-fixer/pom.xml
+++ b/metadata-fixer/pom.xml
@@ -38,6 +38,10 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.verapdf</groupId>
+            <artifactId>verapdf-xmp-core</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
