--- a/model-implementation/pom.xml
+++ b/model-implementation/pom.xml
@@ -42,5 +42,9 @@
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.verapdf</groupId>
+      <artifactId>verapdf-xmp-core</artifactId>
+    </dependency>
   </dependencies>
 </project>
