--- a/pom.xml
+++ b/pom.xml
@@ -115,7 +115,7 @@
     <mvn.gpg.plugin.version>1.6</mvn.gpg.plugin.version>
     <verapdf.pdfbox.version>2.0.0-SNAPSHOT</verapdf.pdfbox.version>
     <verapdf.xmp.version>[0.1.0,0.2.0)</verapdf.xmp.version>
-    <verapdf.model.version>0.9.0-SNAPSHOT</verapdf.model.version>
+    <verapdf.model.version>[0.9.0,0.10.0)</verapdf.model.version>
   </properties>
 
   <dependencyManagement>
