Fixed pom file in core module

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -16,7 +16,8 @@
   <dependencies>
     <dependency>
       <groupId>org.verapdf</groupId>
-      <artifactId>pdf-model</artifactId>
+      <artifactId>pdf-model-xmp</artifactId>
+      <version>${verapdf.model.version}</version>
     </dependency>
 
     <dependency>
