--- a/model-implementation/src/main/resources/log4j.properties
+++ b/model-implementation/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=warn, stdout, file
+log4j.rootLogger=warn, stdout
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
