Metadata fixer fixes and moved from xmpbox to adobe xmp parser

--- a/metadata-fixer/src/main/resources/processed-objects.properties
+++ b/metadata-fixer/src/main/resources/processed-objects.properties
@@ -1,1 +1,2 @@
-processed.objects.path = /processedObjects.xml
+processed.objects.path.pdfa_1 = /processedObjectsPDFA_1.xml
+processed.objects.path.pdfa_2_3 = /processedObjectsPDFA_2_3.xml
