Removed xmpbox dependency and changed pdf-model-xmp dependency to pdf-model

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -16,7 +16,7 @@
   <dependencies>
     <dependency>
       <groupId>org.verapdf</groupId>
-      <artifactId>pdf-model-xmp</artifactId>
+      <artifactId>pdf-model</artifactId>
       <version>${verapdf.model.version}</version>
     </dependency>
 
