--- a/model-implementation/pom.xml
+++ b/model-implementation/pom.xml
@@ -24,7 +24,7 @@
     </dependency>
     <dependency>
       <groupId>org.verapdf</groupId>
-      <artifactId>pdf-model-xmp</artifactId>
+      <artifactId>pdf-model</artifactId>
       <version>${verapdf.model.version}</version>
     </dependency>
     <dependency>
