--- a/installer/pom.xml
+++ b/installer/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.verapdf</groupId>
     <artifactId>verapdf-library</artifactId>
-    <version>0.9.0-SNAPSHOT</version>
+    <version>0.10.0</version>
   </parent>
   <artifactId>installer</artifactId>
   <name>veraPDF Installer</name>
