--- a/legacy-types/pom.xml
+++ b/legacy-types/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>org.verapdf</groupId>
     <artifactId>verapdf-library</artifactId>
-    <version>0.9.0-SNAPSHOT</version>
+    <version>0.10.0</version>
   </parent>
 
   <artifactId>legacy-types</artifactId>
