--- a/metadata-fixer/pom.xml
+++ b/metadata-fixer/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <artifactId>verapdf-library</artifactId>
         <groupId>org.verapdf</groupId>
-        <version>0.10.0</version>
+        <version>0.11.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>metadata-fixer</artifactId>
